--- a/src/components/FormBuilder/formbuilder.css
+++ b/src/components/FormBuilder/formbuilder.css
@@ -4,7 +4,7 @@
   padding: 1rem;
   float: left;
   background-color: #fbfbfb;
-  border: 1px solid #000;
+  border: 1px solid #cecece;
   border-radius: 4px;
 }
 .canvas .element.box {
